// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 gjUENu FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 drgMvX TextArea__StyledInput-sc-ixw2m3-0 fpsNBo"
          disabled=""
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kBmGck FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 uvKYy TextArea__StyledInput-sc-ixw2m3-0 fpsNBo"
          placeholder="Please write a story"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <span
        class="StyledText-sc-1sadyjn-0 hhNxug"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 kBmGck FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 uvKYy TextArea__StyledInput-sc-ixw2m3-0 fpsNBo"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <label
        class="StyledText-sc-1sadyjn-0 eeOkGI"
        for="some-text"
      >
        A helpful area of text
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 kBmGck FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 uvKYy TextArea__StyledInput-sc-ixw2m3-0 fpsNBo"
          id="some-text"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kYqJhw FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 uvKYy TextArea__StyledInput-sc-ixw2m3-0 fpsNBo"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 cbXpay"
      >
        There is something very wrong!
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kQNwCm"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 fmpnGZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 waIbx FormField__FormFieldBox-sc-m9hood-0 bhAVGb"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kBmGck FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 uvKYy TextArea__StyledInput-sc-ixw2m3-0 fpsNBo"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bWzGTv"
      >
        Some useful information
      </span>
    </div>
  </div>
</div>
`;
